I see this error with the app, reported by NextJS, please fix it. The er

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "postinstall": "prisma generate"
+    "postinstall": "patch-package && prisma generate"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
