--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc.0",
-    "react-day-picker": "^8.10.1",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
@@ -65,9 +64,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.0",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0"
   }
 }
