--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "reselect": "^5.1.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
@@ -54,6 +55,7 @@
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
+    "@types/reselect": "^2.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
