--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "nextn",
+  "name": "designcostpro",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "prisma generate",
+    "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -37,7 +39,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.475.0",
     "next": "^16.0.0",
     "next-themes": "^0.3.0",
@@ -57,7 +59,9 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
     "@types/reselect": "^2.2.0",
     "postcss": "^8",
+    "prisma": "^6.18.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "overrides": {
@@ -65,5 +69,6 @@
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0"
-  }
+  },
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
