--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:reset": "npm run db:push && npm run prisma:seed"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.2",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.18.0",
     "@radix-ui/react-accordion": "^1.2.0",
